@startuml
class Inscripcion{
    - alumno: Alumno
    - materias: Set<Materia>
    - fueAprobada: boolean

    +aprobada(): boolean
    +agregarMateriasACursar(Materia ... materia): void
    +getMateriasACursar(): Set<Materia> materias

}

class Alumno{
    - nombre: String
    - apellido: String
    - materiasAprobadas: Set<Materia>

    + agregarMateriasAprobadas(Materia ... materia): void
    + getMateriasAprobadas(): Set<Materia> materias

}

class Materia{
    - nombre: String
    - correlativas: Set<Materia>

    + cumpleCorrelativas(Set<Materia> materias): boolean
    + agregarCorrelativas(Materia ... materia): void
    + getCorrelativas(): Set<Materia> materias
}

Inscripcion --|> Alumno
Inscripcion --|> Materia
Alumno --|> Materia
Materia --|> Materia

@enduml